Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,8 @@ steps:
 
 https://github.com/Manu19-code/samplejavasnip.git
 
+workspace:
+
 - task: JavaToolInstaller@0
   inputs:
     #versionSpec: '17.0.1' 
