--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,6 @@
 # Maven
+
+# Java tool installer
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
@@ -20,3 +22,22 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    allowBrokenSymlinks: 
+    checkStyleRunAnalysis: 
+    codeCoverageClassFilesDirectories: 
+    codeCoverageClassFilter: 
+  
+  continueOnError: 
+- task: JavaToolInstaller@0
+  inputs:
+    #versionSpec: '17.0.1' 
+    jdkArchitectureOption: # Options: x64, x86
+    jdkSourceOption: # Options: AzureStorage, LocalDirectory
+    #jdkFile: # Required when jdkSourceOption == LocalDirectory
+    #azureResourceManagerEndpoint: # Required when jdkSourceOption == AzureStorage
+    #azureStorageAccountName: # Required when jdkSourceOption == AzureStorage
+    #azureContainerName: # Required when jdkSourceOption == AzureStorage
+    #azureCommonVirtualFile: # Required when jdkSourceOption == AzureStorage
+    jdkDestinationDirectory: 
+    #cleanDestinationDirectory: true 
+    azureCommonVirtualFile: 
